# nycu-parallel-programing-final

./: .gitignore  CMakeLists.txt  README.md  analysis.py  efficiency_acceleration.py  efficiency_render.py  eval.py  extract_summary.py  parse_eval.py  plot.py  run.sh  simd_plot_physics.py  simd_plot_render.py  tracy-csvexport  tracy-csvexport-glibc235  tracy.sh  tracy_linux.sh
assets/: clustered_100.txt  clustered_1000.txt  clustered_50.txt  clustered_500.txt  generate.py  planets.txt  random_100.txt  random_1000.txt  random_50.txt  random_500.txt  random_n.py  showcase.py  solar_system_demo.txt  sparse_system_demo.txt
doc/: pp_final.drawio  proposal.tex
final/: CMakeLists.txt  Makefile  N_body.cpp  README.md
final/include/: accelerations.hpp  config.hpp
final/src/: N_body.cpp
final/src/accelerations/: CMakeLists.txt  accelerations_pthread_balanced.cpp  accelerations_pthread_pair.cpp  accelerations_pthread_pair_persist.cpp  accelerations_serial.cpp
include/: accelerations.hpp  camera.hpp  canvas.hpp  config.hpp  integrator.hpp  planet.hpp  ray.hpp  render.hpp  vec3.hpp
src/: N_body.cpp
src/accelerations/: CMakeLists.txt  accelerations_cuda.cu  accelerations_cuda_blocked.cu  accelerations_cuda_interleaved.cu  accelerations_pthread_balanced.cpp  accelerations_pthread_blocked.cpp  accelerations_pthread_interleaved.cpp  accelerations_pthread_mutex_blocked.cpp  accelerations_pthread_mutex_interleaved.cpp  accelerations_pthread_mutex_simd_blocked.cpp  accelerations_pthread_mutex_simd_interleaved.cpp  accelerations_pthread_pair.cpp  accelerations_pthread_pair_interleaved.cpp  accelerations_pthread_pair_persist.cpp  accelerations_pthread_persist.cpp  accelerations_pthread_simd_blocked.cpp  accelerations_pthread_simd_interleaved.cpp  accelerations_serial.cpp  accelerations_serial_simd.cpp  accelerations_simd.cpp  common.cpp
src/camera/: CMakeLists.txt  camera.cpp
src/integrator/: CMakeLists.txt  step_leapfrog.cpp
src/planet/: CMakeLists.txt  planet.cpp
src/render/: CMakeLists.txt  common.cpp  render_cuda.cu  render_pthread.cpp  render_pthread_mutex.cpp  render_pthread_mutex_simd.cpp  render_pthread_simd.cpp  render_serial.cpp  render_serial_simd.cpp
test/: demo1  dense_system_demo.txt
