set(ACCEL_VARIANT "serial" CACHE STRING "Acceleration implementation variant")

if(ACCEL_VARIANT STREQUAL "serial")
    add_library(accelerations accelerations_serial.cpp)
elseif(ACCEL_VARIANT STREQUAL "pthread")
    add_library(accelerations accelerations_pthread.cpp)
elseif(ACCEL_VARIANT STREQUAL "pthread_interleaved")
    add_library(accelerations accelerations_pthread_interleaved.cpp)
elseif(ACCEL_VARIANT STREQUAL "pthread_persist")
    add_library(accelerations accelerations_pthread_persist.cpp)
    target_compile_definitions(accelerations PUBLIC INIT_REQUIRED=1)
elseif(ACCEL_VARIANT STREQUAL "simd")
    add_library(accelerations accelerations_simd.cpp)
elseif(ACCEL_VARIANT STREQUAL "cuda")
    enable_language(CUDA)
    add_library(accelerations accelerations_cuda.cu)
    target_compile_options(accelerations PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:--expt-relaxed-constexpr>)
    target_compile_definitions(accelerations PUBLIC USE_CUDA=1)
else()
    message(FATAL_ERROR "Unknown accelerations variant: ${ACCEL_VARIANT}")
endif()

target_include_directories(accelerations PUBLIC
    ${PROJECT_SOURCE_DIR}/include
)
target_link_libraries(accelerations PUBLIC TracyClient)
target_compile_definitions(accelerations PUBLIC TRACY_ENABLE=1)