set(ACCEL_VARIANT "serial" CACHE STRING "Acceleration implementation variant")

if(ACCEL_VARIANT STREQUAL "serial")
    add_library(accelerations accelerations_serial.cpp)
elseif(ACCEL_VARIANT STREQUAL "serial_simd")
    add_library(accelerations accelerations_serial_simd.cpp)
elseif(ACCEL_VARIANT STREQUAL "pthread_blocked")
    add_library(accelerations accelerations_pthread_blocked.cpp)
elseif(ACCEL_VARIANT STREQUAL "pthread_interleaved")
    add_library(accelerations accelerations_pthread_interleaved.cpp)
elseif(ACCEL_VARIANT STREQUAL "pthread_mutex_blocked")
    add_library(accelerations accelerations_pthread_mutex_blocked.cpp)
    target_compile_definitions(accelerations PUBLIC INIT_REQUIRED=1)
elseif(ACCEL_VARIANT STREQUAL "pthread_mutex_interleaved")
    add_library(accelerations accelerations_pthread_mutex_interleaved.cpp)
    target_compile_definitions(accelerations PUBLIC INIT_REQUIRED=1)
elseif(ACCEL_VARIANT STREQUAL "pthread_simd_blocked")
    add_library(accelerations accelerations_pthread_simd_blocked.cpp)
elseif(ACCEL_VARIANT STREQUAL "pthread_simd_interleaved")
    add_library(accelerations accelerations_pthread_simd_interleaved.cpp)
elseif(ACCEL_VARIANT STREQUAL "pthread_mutex_simd_blocked")
    add_library(accelerations accelerations_pthread_mutex_simd_blocked.cpp)
    target_compile_definitions(accelerations PUBLIC INIT_REQUIRED=1)
elseif(ACCEL_VARIANT STREQUAL "pthread_mutex_simd_interleaved")
    add_library(accelerations accelerations_pthread_mutex_simd_interleaved.cpp)
    target_compile_definitions(accelerations PUBLIC INIT_REQUIRED=1)
elseif(ACCEL_VARIANT STREQUAL "cuda_blocked")
    enable_language(CUDA)
    add_library(accelerations accelerations_cuda_blocked.cu)
    target_compile_definitions(accelerations PUBLIC USE_CUDA=1)
elseif(ACCEL_VARIANT STREQUAL "cuda_interleaved")
    enable_language(CUDA)
    add_library(accelerations accelerations_cuda_interleaved.cu)
    target_compile_definitions(accelerations PUBLIC USE_CUDA=1)
else()
    message(FATAL_ERROR "Unknown accelerations variant: ${ACCEL_VARIANT}")
endif()

target_include_directories(accelerations PUBLIC
    ${PROJECT_SOURCE_DIR}/include
)
target_link_libraries(accelerations PUBLIC TracyClient)
target_compile_definitions(accelerations PUBLIC TRACY_ENABLE=1)