set(RENDER_VARIANT "serial" CACHE STRING "render implementation variant")


if(RENDER_VARIANT STREQUAL "serial")
    add_library(render render_serial.cpp)
elseif(RENDER_VARIANT STREQUAL "serial_simd")
    add_library(render render_serial_simd.cpp)
elseif(RENDER_VARIANT STREQUAL "pthread")
    add_library(render render_pthread.cpp)
elseif(RENDER_VARIANT STREQUAL "pthread_mutex")
    add_library(render render_pthread_mutex.cpp)
    target_compile_definitions(render PUBLIC RENDER_INIT_REQUIRED=1)
elseif(RENDER_VARIANT STREQUAL "pthread_simd")
    add_library(render render_pthread_simd.cpp)
elseif(RENDER_VARIANT STREQUAL "pthread_mutex")
    add_library(render render_pthread_mutex.cpp)
    target_compile_definitions(render PUBLIC INIT_REQUIRED=1)
elseif(RENDER_VARIANT STREQUAL "pthread_mutex_simd")
    add_library(render render_pthread_mutex_simd.cpp)
    target_compile_definitions(render PUBLIC INIT_REQUIRED=1)
elseif(RENDER_VARIANT STREQUAL "cuda")
    add_library(render render_cuda.cu)
    target_compile_definitions(render PUBLIC USE_CUDA=1)
else()
    message(FATAL_ERROR "Unknown render variant: ${RENDER_VARIANT}")
endif()

if(NOT RENDER_VARIANT STREQUAL "cuda")
    target_sources(render PUBLIC ${PROJECT_SOURCE_DIR}/src/render/common.cpp)
endif()

target_include_directories(render PUBLIC
    ${PROJECT_SOURCE_DIR}/include
)
target_link_libraries(render PUBLIC TracyClient)
target_compile_definitions(render PUBLIC TRACY_ENABLE=1)
